# baton

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  justfile
.github/ISSUE_TEMPLATE/: provider-breakage.md
docs/: brief.md  technical-prd.md
src/: cli.rs  config.rs  handoff_store.rs  launch.rs  lib.rs  main.rs  model.rs  render.rs  select.rs  session_ref.rs  settings.rs
src/providers/: claude.rs  codex.rs  mod.rs
tests/: claude_provider.rs  cli_integration.rs  codex_provider.rs  handoff_store.rs  launcher.rs  render_snapshots.rs  settings.rs
tests/fixtures/codex/2026/05/14/: rollout-2026-05-14T10-00-00-fixture-simple.jsonl  rollout-2026-05-14T11-00-00-fixture-tool.jsonl  rollout-2026-05-14T12-00-00-fixture-unknown.jsonl  rollout-2026-05-14T13-00-00-fixture-invalid.jsonl
tests/snapshots/: codex_simple.snap  codex_tool.snap  codex_unknown.snap  render_snapshots__basic_human_agent.snap  render_snapshots__missing_cwd.snap  render_snapshots__mixed_ordering.snap  render_snapshots__tool_call_small_output.snap  render_snapshots__tool_call_truncated_output.snap  render_snapshots__unknown_event_preserved.snap
thoughts/arcs/20260514_claudex-v1/: prologue.md
thoughts/arcs/20260514_claudex-v1/chapters/: A-scaffold-types-config.md  B-render-truncate-store.md  C-claude-provider.md  D-codex-provider.md  E-cli-select-launch.md
