[package]
name = "claudex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
time = { version = "0.3", features = ["formatting", "parsing", "serde-human-readable", "local-offset", "macros"] }
toml = "0.8"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

[[bin]]
name = "claudex"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
